# dataUrnas-br

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-hf.yml
data/parquet/: schema.sql
scripts/: build_db.py  download_and_build.py  download_full.py  download_full_2t.py  rebuild_db.py  rebuild_parallel.py
src/dataurnas/: __init__.py  cli.py  config.py  models.py
src/dataurnas/analyzer/: __init__.py  batch.py  integrity.py  log_analyzer.py  statistical.py
src/dataurnas/dashboard/: __init__.py  analysis.py  app.py
src/dataurnas/database/: __init__.py  duckdb_store.py
src/dataurnas/downloader/: __init__.py  client.py  manager.py  tse_api.py
src/dataurnas/parsers/: __init__.py  asn1_helper.py  bu.py  log.py  signature.py
